# YandexCup2024-ML-Music-IR

./: .gitignore  README.md  pyproject.toml  submission.py
csi/: submission.py  tricks.py
csi/base/: utils.py
csi/base/model/: model.py  pooling.py  predict.py  projection.py
csi/training/criterion/: container.py  losses.py  metric_learning.py  weight_strategy.py
csi/training/data/: augmentations.py  collator.py  dataset.py
csi/training/loop/: loop.py  utils.py
csi/training/metrics/: ndcg.py
csi/training/mlflow/: experiment_logging.py
csi/training/optimizers/: tiger.py  utils.py
csi/training/pipeline/: train.py
csi/training/pipeline/conf/: train_pipeline.yaml
csi/training/schedulers/: scheduler.py
final_artifacts/hgnetv2_b5_metric_learning_big_margin_drop_cliques_test_0_6_6folds02_19_23/hydra/: config.yaml
notebooks/: Filter.ipynb  MLFLOW.ipynb  TestScoring.ipynb  ValScoring.ipynb
